crates/reinhardt-pages/tests/ui/loader/fail/receiver.rs
use reinhardt_pages::loader;

#[loader]
async fn receiver(self) -> Result<(), String> {
	Ok(())
}

fn main() {}
